# fluxins

./: .clang-format  .clangd  .iwyu.imp  CMakeLists.txt  changelog.md  coding_guidelines.md  contributing.md  license.md  readme.md
.github/workflow/: ci.yml
.github/workflows/: create-release.yml
cmake/: fluxins.pc.in  ronminial.cmake  subdep.cmake
documentation/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  customize.cpp  repl.cpp  usage.cpp
include/fluxins/: code.hpp  config.hpp  context.hpp  error.hpp  expression.hpp  fluxins.hpp  parser.hpp
source/: CMakeLists.txt  builtins.cpp  debug.cpp  evaluator.cpp  fluxins.cpp  main.cpp  parser.cpp
test/: CMakeLists.txt  basic.cpp  builtins.cpp  config.cpp  context.cpp  error.cpp  operator.cpp  test.hpp
